Update from December 9, 2024

--- a/74612-h/74612-h.htm
+++ b/74612-h/74612-h.htm
@@ -108,7 +108,7 @@ table.autotable th { padding: 4px; }
     </style>
 </head>
 <body>
-<div style='text-align:center'>*** START OF THE PROJECT GUTENBERG EBOOK 74612 ***</div>
+<div>*** START OF THE PROJECT GUTENBERG EBOOK 74612 ***</div>
 
 <div class="titlepage">
 
@@ -4540,7 +4540,7 @@ Did I fight a chauffeur or did I dream it?"</p>
 
 <p>He could not intend to be so cruel, not even to punish her for letting
 the bell waken him. It was only that he liked to feel his own power
-over her He cared only for women that he could control, and she knew
+over her. He cared only for women that he could control, and she knew
 that it was the constant struggle between them, in which he was always
 victorious, that gave her her greatest hold on him. But it did hurt her
 cruelly in this moment of security to be reminded of the dangers that
@@ -6310,7 +6310,7 @@ triumph in her victory. The sale had reduced Bert's debt by another
 four hundred dollars, for she could afford now to turn in the entire
 commission against it.</p>
 
-<p>The jolting of the train shock her relaxed body. Her cheek lay against
+<p>The jolting of the train shook her relaxed body. Her cheek lay against
 the rough plush of the chairback, for she was too tired to sit upright.
 Against the black square of the window her life arranged itself before
 her. How many times she had seen her life lying before her like a
@@ -7151,7 +7151,7 @@ white face and bright eyes. This hotel saw her only on her return trips
 from the tract, and she was always exhausted after making or losing a
 sale. She locked the door behind him, and began to undress.</p>
 
-<p>Paul must pot be involved. She must manage to shield him. A sensation
+<p>Paul must not be involved. She must manage to shield him. A sensation
 of nausea swept over her. The vulgarity, the cheap coarseness of it!
 But she must not think. She was too tired. Why had she blundered into
 such a situation? What change had the years made in Bert? Her thoughts,
@@ -7160,7 +7160,7 @@ two in her mind together was intolerable, it was the essence of her
 humiliation. Married to one man, bound to him by a thousand memories
 that rushed upon her, and loving another, engaged to him! No fine,
 self-respecting woman could be in such a position. But she was. She
-must face that fact. No, she must not face it Not until she was rested,
+must face that fact. No, she must not face it. Not until she was rested,
 in command of herself.</p>
 
 <p>She bathed, scrubbing her skin until it glowed painfully. Cold-cream
@@ -7188,7 +7188,7 @@ once more quietly self-controlled.</p>
 
 <p>Refreshed by a cold plunge, crisply dressed, composed, she ate dinner
 in the big, softly lighted dining-room, nodding across white tables
-to the business men she knew. Then, led by an impulse she did net
+to the business men she knew. Then, led by an impulse she did not
 question, she went out into the crowded streets. With her walked
 the ghost of the girl who had come down from Masonville, dazzled,
 wide-eyed, so pitifully sure of herself, to learn to telegraph.</p>
@@ -8162,7 +8162,7 @@ attentive, she listened to Mr. Hayden's criticisms of the manuscript.</p>
 The story really begins here." His pencil hovered over the page. "If
 you don't object to our making changes?"</p>
 
-<p>"Oh, please dot I want to learn."</p>
+<p>"Oh, please do I want to learn."</p>
 
 <p>An hour went by, and another. Mr. Hayden was interested in her opinions
 on all subjects; he led her to talk of land selling, of advertising, of
@@ -9306,7 +9306,7 @@ Tower, the high cliffs of Telegraph, the castle-like height of Russian
 Hill, the Presidio, Cliff House, the beach, had sunk into grayness
 on the horizon, she went down to her stateroom. It was piled with
 gifts, long striped boxes that held flowers, baskets of fruit, square
-silver-corded packages that spoke of bonbons, others large and small
+silver-corded packages that spoke of bonbons, others large and small.
 She had not known that so many people cared.</p>
 
 <p>A blind impulse had brought her into this little place where she could
@@ -9333,7 +9333,7 @@ the world, all the world, outside, waiting for me!"</p>
 
 <p class="ph2">THE END</p>
 
-<div style='text-align:center'>*** END OF THE PROJECT GUTENBERG EBOOK 74612 ***</div>
+<div>*** END OF THE PROJECT GUTENBERG EBOOK 74612 ***</div>
 </body>
 </html>
 
